--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "bourbon": "^4.2.7",
+    "compass-mixins": "^0.12.10",
     "gsap": "^1.18.5",
     "json-formatter-js": "^1.0.0",
     "vanilla-modal": "^1.3.0"
