--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "node-sass": "^3.7.0",
     "npm-install-webpack-plugin": "^4.0.0",
     "sass-loader": "^3.2.0",
