--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personalsite",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -27,10 +27,6 @@
     "webpack-merge": "^0.13.0"
   },
   "dependencies": {
-    "bourbon": "^4.2.7",
-    "compass-mixins": "^0.12.10",
-    "gsap": "^1.18.5",
-    "json-formatter-js": "^1.0.0",
-    "vanilla-modal": "^1.3.0"
+
   }
 }
