--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "webpack-merge": "^0.13.0"
   },
   "dependencies": {
-
+    "bourbon": "^4.2.7",
+    "compass-mixins": "^0.12.10",
+    "gsap": "^1.18.5",
+    "vanilla-modal": "^1.3.0"
   }
 }
